# PythonEnv

./: LICENSE  README.md  main.py  requirements.txt  setup.cfg
meowpkg.egg-info/: PKG-INFO  SOURCES.txt
src/XXX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/meowpkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mylib/: code_is_here.py
