[options]
packages = 
    mylib
install_requires =
    requests>=2 # DEP.
    pandas>=1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[metadata]
name = meowpkg
version = 0.0.1
description = a package that meows
author = Sei
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cove>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
mylib = py.typed

[flake8]
max-line-length == 160



